@@ -13,8 +13,8 @@
 Current packages:
 <ul>
 <li>
-Latest Stable Release (<b>2.2.4</b>):
-<a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.2.4.tar.gz">tar.gz</a></li>
+Latest Stable Release (<b>2.2.5</b>):
+<a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.2.5.tar.gz">tar.gz</a></li>
 
 <li>
 Latest Beta Release (<b>2.3.28</b>):
