@@ -24,7 +24,7 @@ FVWM 2.2.4, a stable bugfix release, is now available for download!
 <blockquote>
 <h3><font color="yellow">NEWS FLASH!</font></h3>
 <p>
-FVWM 2.3.28, a stable beta release, is now available for download!
+FVWM 2.2.5, an official release, is now available for download!
 <hr>
 
 <p>
@@ -33,7 +33,7 @@ manager for the X Window system. <a href="download.html">Get</a> your copy.
 
 <blockquote>
 <table border=0 cellpadding=0 cellspacing=0>
-  <tr><td>Latest Stable Release: &nbsp;<td><b>2.2.4</b></tr>
+  <tr><td>Latest Stable Release: &nbsp;<td><b>2.2.5</b></tr>
   <tr><td>Latest Beta Release:   &nbsp;<td><b>2.3.28</b></tr>
 </table>
 </blockquote>
@@ -68,6 +68,6 @@ manager for the X Window system. <a href="download.html">Get</a> your copy.
 
 <hr>
 Created: Jan 31, 1996 *
-Last modified: Jan 25, 2001
+Last modified: Feb 25, 2001
 </body>
 </html>
