@@ -1,3 +1,7 @@
+2001-02-25  Dan Espen  <dane@mk.telcordia.com>
+
+	* download.html, index.html: News flash, download 2.2.5.
+
 2001-01-25  Dan Espen  <dane@mk.telcordia.com>
 
 	* download.html, index.html: News Flash, download 2.3.28.
